kube/alrest/vclus/cipra/anubistest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anubistest
spec:
  selector:
    xeiaso.net/thing: http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
    - name: anubis
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
